--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -25,9 +25,19 @@
     &:disabled { 
         background-color: lighten($color: $primary, $amount: 15); 
     }
+    
+    transition: background-color .3s ease;
 
     &:hover {
         background-color: darken($color: $primary, $amount: 15)
+    }
+}
+
+.btn-danger {
+    background-color: red;
+
+    &:hover {
+        background-color: darken($color: red, $amount: 10);
     }
 }
 
